@@ -1,4 +1,5 @@
- - Add CellVolume to Cell (Cell.v)
+ - Add Circumradius to Cell (Cell.circumradius)
+ - Add CellVolume to Cell (Cell.volume)
 0.5.3 [2010-07-01]
  - Rename ElementRestriction --> RestrictedElement
  - Experimental import of x from tetrahedron
